updated styling of About Page, Landing Page, about[tabs content & styling], Calendar Page, Competition Page

--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -2,3 +2,13 @@
 @import 'tailwindcss/components';
 @import './prism.css';
 @import 'tailwindcss/utilities';
+
+.black-2-bg {
+  background-color: #20232a;
+}
+.dark .dark\:black-2-bg {
+  background-color: #20232a;
+}
+.crisp-black {
+  background-color: #171616;
+}
